# xambid

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE
src/: capture_x11.cpp  capture_x11.hpp  capture_x11_nvfbc.cpp  capture_x11_nvfbc.hpp  capture_x11_shm.cpp  capture_x11_shm.hpp  socket.cpp  socket.hpp  x11_context.cpp  x11_context.hpp  xambid.cpp
xambi/: CMakeLists.txt
xambi/include/xambi/: averaging_color_aggregate.hpp  capture_api.hpp  capture_backend.hpp  capture_x11.hpp  capture_x11_nvfbc.hpp  capture_x11_shm.hpp  color_aggregate.hpp  color_filter.hpp  color_mode_aggregate.hpp  hsv.hpp  hue_cluster_aggregate.hpp  lowpass_color_filter.hpp  naive_screen_sampler.hpp  random_screen_sampler.hpp  rgb_color.hpp  screen_rect.hpp  screen_sampler.hpp  screen_zone.hpp  stratified_screen_sampler.hpp  utils.hpp  x11_context.hpp  x11_image.hpp
xambi/src/: averaging_color_aggregate.cpp  capture_backend.cpp  capture_x11.cpp  capture_x11_nvfbc.cpp  capture_x11_shm.cpp  lowpass_color_filter.cpp  naive_screen_sampler.cpp  screen_sampler.cpp  x11_context.cpp  x11_image.cpp
xambid/: CMakeLists.txt  xambid.cpp
xambid/src/: socket.cpp  socket.hpp  xambid.cpp
